<resources>
    <string name="app_name">Ixltech</string>

    <string name="personal_info">Prersonal Info</string>
    <string name="first_name">Enter First name</string>
    <string name="last_name">Enter Last name</string>
    <string name="enter_your_phone_no">Enter your Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_date">Select Date</string>
    <string name="employee_info">Employee Info</string>
    <string name="employee_no">Enter Employee No</string>
    <string name="employee_name">Enter Employee Name</string>
    <string name="designation">Enter Designation</string>
    <string name="bank_info">Bank Info</string>
    <string name="bank_name">Enter Bank Name</string>
    <string name="account_number">Enter Account Number</string>
    <string name="ifsc_code">Enter IFSC Code</string>
    <string name="bank_branches">Select Bank Branches</string>
    <string name="account">Select Type of Account</string>
    <string name="work_exp">Select Work Experience</string>
    <string name="submit">Submit</string>

    <string-array name="Accounts">
        <item>Saving</item>
        <item>CC</item>
        <item>OD</item>

    </string-array>

    <string-array name="WorkExp">
        <item>0-1</item>
        <item>1-3</item>
        <item>3-5</item>

    </string-array>

</resources>