<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PersonalInfo">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_info"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints=""
        android:backgroundTint="@color/purple_200"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHighlight="#4FFFFFFF"
        android:textCursorDrawable="@color/purple_200"
        app:layout_constraintEnd_toStartOf="@+id/last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/purple_200"
        android:ems="10"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHighlight="#4FFFFFFF"
        android:textCursorDrawable="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/first_name"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/mobileNumber"
        android:layout_width="330dp"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/purple_200"
        android:ems="10"
        android:hint="@string/enter_your_phone_no"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHighlight="#4FFFFFFF"
        android:textCursorDrawable="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name"
        tools:targetApi="lollipop" />

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileNumber">

        <RadioButton
            android:id="@+id/radioMaleButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:buttonTint="@color/purple_200"
            android:checked="true"
            android:text="@string/male"
            tools:targetApi="lollipop" />

        <RadioButton
            android:id="@+id/radioFemaleButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:buttonTint="@color/purple_200"
            android:text="@string/female"
            tools:targetApi="lollipop" />

        <RadioButton
            android:id="@+id/radioOtherButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:buttonTint="@color/purple_200"
            android:text="@string/other"
            tools:targetApi="lollipop" />

    </RadioGroup>

    <EditText
        android:id="@+id/date_of_birth"
        android:layout_width="160dp"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:autofillHints=""
        android:backgroundTint="@color/purple_200"
        android:ems="10"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        android:textColor="#000000"
        android:textColorHighlight="#4FFFFFFF"
        android:textCursorDrawable="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderGroup"
        tools:targetApi="o" />

    <Button
        android:id="@+id/select_dob"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="15dp"
        android:text="@string/select_date"
        app:layout_constraintStart_toEndOf="@+id/date_of_birth"
        app:layout_constraintTop_toBottomOf="@+id/genderGroup" />





    <Button
        android:id="@+id/submitBtn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="#FF8E01"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_dob" />

</androidx.constraintlayout.widget.ConstraintLayout>